tests/baselines/reference/parserIndexMemberDeclaration6.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration6.ts(2,4): error TS1071: 'static' modifier cannot appear on an index signature.


==== tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration6.ts (1 errors) ====
    class C {
       static [x: string]: string;
       ~~~~~~
!!! error TS1071: 'static' modifier cannot appear on an index signature.
    }